--- a/project/mobile/class-attendance-system/src/pages/account/account.html
+++ b/project/mobile/class-attendance-system/src/pages/account/account.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Account</ion-title>
+    <ion-title>个人信息</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -13,11 +13,11 @@
     <h2>{{username}}</h2>
 
     <ion-list inset>
-      <button ion-item (click)="updatePicture()">Update Picture</button>
-      <button ion-item (click)="changeUsername()">Change Username</button>
-      <button ion-item (click)="changePassword()">Change Password</button>
+      <button ion-item (click)="updatePicture()">上传照片</button>
+      <!-- <button ion-item (click)="changeUsername()">修改用户名</button> -->
+      <button ion-item (click)="changePassword()">修改密码</button>
       <button ion-item (click)="support()">Support</button>
-      <button ion-item (click)="logout()">Logout</button>
+      <button ion-item (click)="logout()">注销</button>
     </ion-list>
   </div>
 </ion-content>
