--- a/project/mobile/class-attendance-system/src/pages/about/about.html
+++ b/project/mobile/class-attendance-system/src/pages/about/about.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>关于</ion-title>
+    <ion-title>About</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="presentPopover($event)">
         <ion-icon name="more"></ion-icon>
