--- a/project/mobile/class-attendance-system/src/pages/signup/signup.html
+++ b/project/mobile/class-attendance-system/src/pages/signup/signup.html
@@ -3,7 +3,7 @@
 		<button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-		<ion-title>注册</ion-title>
+		<ion-title>Signup</ion-title>
 	</ion-navbar>
 </ion-header>
 
@@ -16,26 +16,26 @@
 	<form #signupForm="ngForm" novalidate>
 		<ion-list no-lines>
 			<ion-item>
-				<ion-label stacked color="primary">用户名</ion-label>
+				<ion-label stacked color="primary">Username</ion-label>
 				<ion-input [(ngModel)]="signup.username" name="username" type="text" #username="ngModel" required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="username.valid || submitted == false" color="danger" padding-left>
-				请输入用户名
+				Username is required
 			</p>
 
 			<ion-item>
-				<ion-label stacked color="primary">密码</ion-label>
+				<ion-label stacked color="primary">Password</ion-label>
 				<ion-input [(ngModel)]="signup.password" name="password" type="password" #password="ngModel" required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="password.valid || submitted == false" color="danger" padding-left>
-				请输入密码
+				Password is required
 			</p>
 		</ion-list>
 
 		<div padding>
-			<button ion-button (click)="onSignup(signupForm)" type="submit" block>注册</button>
+			<button ion-button (click)="onSignup(signupForm)" type="submit" block>Create</button>
 		</div>
 	</form>
 
