--- a/project/mobile/class-attendance-system/src/pages/speaker-list/speaker-list.html
+++ b/project/mobile/class-attendance-system/src/pages/speaker-list/speaker-list.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>签到</ion-title>
+    <ion-title>Speakers</ion-title>
   </ion-navbar>
 </ion-header>
 
