--- a/project/mobile/class-attendance-system/src/pages/tabs-page/tabs-page.html
+++ b/project/mobile/class-attendance-system/src/pages/tabs-page/tabs-page.html
@@ -1,6 +1,6 @@
 <ion-tabs [selectedIndex]="mySelectedIndex" name="conference">
-  <ion-tab [root]="tab1Root" tabTitle="课程信息" tabIcon="calendar" tabUrlPath="conference-schedule"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="签到" tabIcon="contacts"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="定位" tabIcon="map"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="关于" tabIcon="information-circle"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Schedule" tabIcon="calendar" tabUrlPath="conference-schedule"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="Speakers" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Map" tabIcon="map"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
 </ion-tabs>
