--- a/project/mobile/class-attendance-system/src/pages/login/login.html
+++ b/project/mobile/class-attendance-system/src/pages/login/login.html
@@ -1,9 +1,6 @@
 <ion-header>
 	<ion-navbar>
-		<button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-		<ion-title>Login</ion-title>
+		<ion-title>登录</ion-title>
 	</ion-navbar>
 </ion-header>
 
@@ -15,32 +12,32 @@
 	<form #loginForm="ngForm" novalidate>
 		<ion-list no-lines>
 			<ion-item>
-				<ion-label stacked color="primary">Username</ion-label>
+				<ion-label stacked color="primary">用户名</ion-label>
 				<ion-input [(ngModel)]="login.username" name="username" type="text" #username="ngModel" spellcheck="false" autocapitalize="off"
 					required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="username.valid || submitted == false" color="danger" padding-left>
-				Username is required
+				用户名必填
 			</p>
 
 			<ion-item>
-				<ion-label stacked color="primary">Password</ion-label>
+				<ion-label stacked color="primary">密码</ion-label>
 				<ion-input [(ngModel)]="login.password" name="password" type="password" #password="ngModel" required>
 				</ion-input>
 			</ion-item>
 			<p ion-text [hidden]="password.valid || submitted == false" color="danger" padding-left>
-				Password is required
+				密码必填
 			</p>
 		</ion-list>
 
 		<ion-row responsive-sm>
 			<ion-col>
-				<button ion-button (click)="onLogin(loginForm)" type="submit" block>Login</button>
+				<button ion-button (click)="onLogin(loginForm)" type="submit" block>登录</button>
 			</ion-col>
-			<ion-col>
-				<button ion-button (click)="onSignup()" color="light" block>Signup</button>
-			</ion-col>
+			<!--<ion-col>
+				<button ion-button (click)="onSignup()" color="light" block>注册</button>
+			</ion-col>-->
 		</ion-row>
 	</form>
 
