--- a/project/mobile/class-attendance-system/src/pages/tutorial/tutorial.html
+++ b/project/mobile/class-attendance-system/src/pages/tutorial/tutorial.html
@@ -1,7 +1,7 @@
 <ion-header no-border>
   <ion-navbar>
     <ion-buttons end *ngIf="showSkip">
-      <button ion-button (click)="startApp()" color="primary">Skip</button>
+      <button ion-button (click)="startApp()" color="primary">跳过</button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
@@ -12,30 +12,30 @@
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-1.png" class="slide-image"/>
       <h2 class="slide-title">
-        Welcome to <b>ICA</b>
+        欢迎 <b>课堂考勤系统</b>
       </h2>
       <p>
-        The <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code use.
+        让考勤更简单
       </p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-2.png" class="slide-image"/>
-      <h2 class="slide-title" >What is Ionic?</h2>
-      <p><b>Ionic Framework</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies like HTML, CSS, and JavaScript.</p>
+      <h2 class="slide-title" >考勤系统?</h2>
+      <p> 随时随地查看自己的课程信息</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-3.png" class="slide-image"/>
-      <h2 class="slide-title">What is Ionic Pro?</h2>
-      <p><b>Ionic Pro</b> is a powerful set of services and features built on top of Ionic Framework that brings a totally new level of app development agility to mobile dev teams.</p>
+      <h2 class="slide-title">考勤系统?</h2>
+      <p>准确定位签到</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-4.png" class="slide-image"/>
-      <h2 class="slide-title">Ready to Play?</h2>
+      <h2 class="slide-title">准备好了吗?</h2>
       <button ion-button icon-end large clear (click)="startApp()">
-        Continue
+        开始
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
     </ion-slide>
