web 手机端修改，修改登录获取token及班级公告信息获取

--- a/project/mobile/class-attendance-system/src/index.html
+++ b/project/mobile/class-attendance-system/src/index.html
@@ -45,8 +45,10 @@
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
 
+
+  <!-- <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=MjsNT1sBB4HbOxMKRR4d5tF1vvMixMxG"></script> -->
   <!-- google maps script is loaded last as to not block rendering -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js"></script>
+  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js"></script> -->
 
 </body>
 
