手機端歡飲界面圖片及文字修改

--- a/project/mobile/class-attendance-system/src/pages/tutorial/tutorial.html
+++ b/project/mobile/class-attendance-system/src/pages/tutorial/tutorial.html
@@ -12,23 +12,23 @@
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-1.png" class="slide-image"/>
       <h2 class="slide-title">
-        欢迎 <b>课堂考勤系统</b>
+       <b>课堂考勤系统</b>
       </h2>
       <p>
-        让考勤更简单
+        准确 详细 智能的记录学生出勤状态
       </p>
+    </ion-slide>
+
+    <ion-slide >
+      <img src="assets/img/ica-slidebox-img-3.png" class="slide-image"/>
+      <h2 class="slide-title" >考勤系统?</h2>
+      <p>课程信息随时查</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-2.png" class="slide-image"/>
-      <h2 class="slide-title" >考勤系统?</h2>
-      <p> 随时随地查看自己的课程信息</p>
-    </ion-slide>
-
-    <ion-slide>
-      <img src="assets/img/ica-slidebox-img-3.png" class="slide-image"/>
       <h2 class="slide-title">考勤系统?</h2>
-      <p>准确定位签到</p>
+      <p>打卡签到更方便</p>
     </ion-slide>
 
     <ion-slide>
