--- a/project/mobile/class-attendance-system/src/pages/about/about.html
+++ b/project/mobile/class-attendance-system/src/pages/about/about.html
@@ -39,13 +39,7 @@
     </ion-list>
 
     <p>
-      The Ionic Conference is a one-day conference featuring talks from the
-      Ionic team. It is focused on Ionic applications being built with
-      Ionic 2. This includes migrating apps from Ionic 1 to Ionic 2,
-      Angular concepts, Webpack, Sass, and many other technologies used
-      in Ionic 2. Tickets are completely sold out, and we’re expecting
-      more than 1000 developers – making this the largest Ionic
-      conference ever!
+      学生考勤系统这款产品提供了课堂考勤、课外请假、话题讨论和消息推送等功能，这些功能不仅解决了传统课堂点名和学生请假方式的弊端，而且可以让学生对与课程相关的话题发表见解，增强理解，加深记忆，消息发布可以使得学生及时对本课程做出准备。教师不用再花时间去点名，学生签到、请求申请都变得简单，让老师、学生双方都可以得到更好的体验。
     </p>
   </div>
 </ion-content>
