手機百度地圖功能修改

--- a/project/mobile/class-attendance-system/src/pages/map/map.html
+++ b/project/mobile/class-attendance-system/src/pages/map/map.html
@@ -3,7 +3,7 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Map</ion-title>
+    <ion-title>地图</ion-title>
   </ion-navbar>
 </ion-header>
 
