--- a/project/mobile/class-attendance-system/src/pages/speaker-list/speaker-list.html
+++ b/project/mobile/class-attendance-system/src/pages/speaker-list/speaker-list.html
@@ -3,12 +3,12 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Speakers</ion-title>
+    <ion-title>签到</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content class="outer-content speaker-list">
-  <ion-list [virtualScroll]="speakers">
+  <!-- <ion-list [virtualScroll]="speakers">
     <ion-grid fixed>
       <ion-row align-items-stretch>
 
@@ -62,5 +62,5 @@
         </ion-col>
       </ion-row>
     </ion-grid>
-  </ion-list>
+  </ion-list> -->
 </ion-content>
