--- a/project/desktop/CAS/src/index.html
+++ b/project/desktop/CAS/src/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="Access-Control-Allow-Origin" content="*" />
   <meta http-equiv="x-ua-compatible" content="IE=edge">
   <title>考勤系統</title>
+  
 </head>
 <body>
 
@@ -12,7 +13,7 @@
 
 <script type="text/javascript">
 
-	window.location.href='http://47.106.117.191';
+	window.location.href='http://localhost:8080/jeecg';
 
 
 /*function getTokens(){
