--- a/project/mobile/class-attendance-system/src/pages/login/login.html
+++ b/project/mobile/class-attendance-system/src/pages/login/login.html
@@ -6,7 +6,7 @@
 
 <ion-content>
 	<div class="logo">
-		<img src="assets/img/appicon.svg" alt="Ionic logo">
+		<img src="assets/img/appicon.png" alt="Ionic logo">
 	</div>
 
 	<form #loginForm="ngForm" novalidate>
