--- a/project/desktop/CAS/src/index.html
+++ b/project/desktop/CAS/src/index.html
@@ -12,7 +12,7 @@
 
 <script type="text/javascript">
 
-	window.location.href='http://47.106.117.191';
+	window.location.href='http://127.0.0.1:8080/jeecg/';
 
 
 /*function getTokens(){
