--- a/project/mobile/class-attendance-system/src/pages/about/about.html
+++ b/project/mobile/class-attendance-system/src/pages/about/about.html
@@ -14,29 +14,53 @@
 
 <ion-content>
   <div padding class="about-info">
-    <h4>考勤系統</h4>
+    <h4>考勤系統 工程实训下午第三小组</h4>
 
-    <!-- <ion-list no-lines>
-      <ion-item>
-        <ion-icon name="calendar" item-start></ion-icon>
-        <ion-label>Date</ion-label>
-        <ion-datetime displayFormat="MMM DD, YYYY" max="2056" [(ngModel)]="conferenceDate"></ion-datetime>
-      </ion-item>
-
-      <ion-item>
-        <ion-icon name="pin" item-start></ion-icon>
-        <ion-label>Location</ion-label>
-        <ion-select>
-          <ion-option value="madison" selected>Madison, WI</ion-option>
-          <ion-option value="austin">Austin, TX</ion-option>
-          <ion-option value="chicago">Chicago, IL</ion-option>
-          <ion-option value="seattle">Seattle, WA</ion-option>
-        </ion-select>
-      </ion-item>
-    </ion-list> -->
+  
 
     <p>
       学生考勤系统这款产品提供了课堂考勤、课外请假、话题讨论和消息推送等功能，这些功能不仅解决了传统课堂点名和学生请假方式的弊端，而且可以让学生对与课程相关的话题发表见解，增强理解，加深记忆，消息发布可以使得学生及时对本课程做出准备。教师不用再花时间去点名，学生签到、请求申请都变得简单，让老师、学生双方都可以得到更好的体验。
     </p>
+
+    
   </div>
+
+  <ion-list>
+      <h5>小组成员</h5>
+      <ion-item>
+        <ion-thumbnail item-start>
+          <img src="assets/img/ljn.jpg">
+        </ion-thumbnail>
+        <h2>路建宁</h2>
+        <p>学号：170327104</p>
+      </ion-item>
+      <ion-item>
+          <ion-thumbnail item-start>
+            <img src="assets/img/zjj.jpg">
+          </ion-thumbnail>
+          <h2>张佳俊</h2>
+          <p>学号：170327079</p>
+        </ion-item>
+        <ion-item>
+            <ion-thumbnail item-start>
+              <img src="assets/img/zxg.jpg">
+            </ion-thumbnail>
+            <h2>周小根</h2>
+            <p>学号：170327086</p>
+          </ion-item>
+          <ion-item>
+              <ion-thumbnail item-start>
+                <img src="assets/img/fdy.jpg">
+              </ion-thumbnail>
+              <h2>冯丹阳</h2>
+              <p>学号：170327091</p>
+            </ion-item>
+            <ion-item>
+                <ion-thumbnail item-start>
+                  <img src="assets/img/ygp.jpg">
+                </ion-thumbnail>
+                <h2>余国鹏</h2>
+                <p>学号：170327076</p>
+              </ion-item>
+    </ion-list>
 </ion-content>
